2007-09-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: Actually reverting the previous change. It somehow
	looks a bit worse.

2007-09-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: Changing the infobanner background pixmap to NULL
	when realizing the banner. Should make the infonbanner effect a bit more
	bearable.

2007-09-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-volumebar.c:
	* src/hildon-volumebar.h: Changing the GtkWidget to HildonVolumebar in
	hildon_volumebar_set_range_insensitive_message and
	hildon_volumebar_set_range_insensitive_messagef. Fixes MB#1848.

2007-09-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.c: Fixing the border freeing on destroy.

2007-09-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-code-dialog-private.h:
	* src/hildon-code-dialog.c: Adding a patch by Tomas Junnonen to fix the
	kw keyboard support in HildonCodeDialog.

2007-08-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.14-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-08-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-date-editor.c:
	* src/hildon-number-editor.c:
	* src/hildon-private.c:
	* src/hildon-private.h:
	* src/hildon-time-editor.c:
	* src/hildon-weekday-picker.c: A patch by Xan Lopez to fix focus
	handling in subclassed composite widgets. Fixes: NB#66628.

2007-08-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.c: Removing extra gtk_main_iteration () processing
	from destroy_ callback as it introduces problems in async dbus signal
	handlers. Fixes NB#66673.

2007-08-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-hvolumebar-example.c:
	* src/hildon-volumebar.c: Improving the focus handling in the